--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@emotion/react": "^11.11.3",
     "@tensorflow/tfjs": "^4.17.0",
     "css-loader": "6.8.1",
+    "emotion": "^11.0.0",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.3",
     "i": "^0.3.7",
